<resources>
    <string name="app_name">P2 Application</string>
    <string name="wrongpassword">" Password should be atleast 6 characters! "</string>
    <string name="passwordisnotcorrect">Password doesn\'t match!</string>
    // Tensor
    <string name="tfe_ic_app_name" translation_description="Image Classification demo app [CHAR_LIMIT=40]">TFL Classify</string>
    <string name="tfe_ic_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="tfe_ic_gpu_quant_error" translation_description="Error regarding GPU support for Quant models[CHAR_LIMIT=60]">GPU does not yet supported quantized models.</string>
    <string name="tfe_ic_model" translatable="false">Model:</string>
    <string-array name="tfe_ic_models" translatable="false">
        <item>Quantized_EfficientNet</item>
        <item>Float_EfficientNet</item>
        <item>Quantized_MobileNet</item>
        <item>Float_MobileNet</item>
    </string-array>

    <string name="tfe_ic_device" translatable="false">Device:</string>
    <string-array name="tfe_ic_devices" translatable="false">
        <item>CPU</item>
        <!-- TODO: Add GPU  -->

    </string-array>
    // Schedule
    <string-array name="Genders">
        <item>Gender</item>
        <item>Male </item>
        <item>Female </item>


    </string-array>

    // Adoption
    <string-array name="AdoptionGenders">
        <item>Status</item>
        <item>Single </item>
        <item>Married</item>
        <item>Divorced</item>
        <item>Separated </item>
        <item>Widowed </item>


    </string-array>


    // Lost and Found
    <string-array name="PetGenders">
        <item>Gender</item>
        <item>Male </item>
        <item>Female </item>
        <item>Unsure </item>


    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="activity_name_classification">Identify Dog Breeds</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="from_gallery">From Gallery..</string>
    <string name="about_message"><![CDATA[
    <h1>Identify Dog Breeds</h1>
    <p>Identify over one hundred different dog breeds with your smartphone.</p>
    <p>Click the camera button or load an image from the image gallery to analyze a single picture. Tap the display to close the displayed result, or use the share button to share a screenshot.</p>
    <p>Activate continuous predictions and keep the dog in the circle to get predictions directly from the video stream. The application reports up to three predictions it believes to be the most correct. Please treat the output only as a suggestion.</p>
    <p>If you like this app consider buying the premium version which supports the identification of more than two hundred different dog breeds with much higher accuracy: https://play.google.com/store/apps/details?id=com.jstappdev.identify_dog_breeds_pro</p>
    <h2>Acknowledgements</h2>
    <p>Based on an extended version of the Stanford Dogs dataset. Icons made by Pause08, Smashicons, Becris, Freepik from www.flaticon.com.
    <p>Apache License 2.0. Source code available at github.com/j05t/dbclf. Pictures from Wikipedia.</p>
    ]]></string>
    <string name="about_menu">About</string>
    <string name="exit_menu">Exit</string>
    <string name="error_tf_init">Out of Memory Error. Try closing a few background applications.</string>
    <string name="share_with">Share with..</string>
    <string name="list_breeds">Supported Breeds</string>
    <string name="searchFor">Look up on Wikipedia?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="no_detection">No detection</string>
    <string name="change_language">Change Language</string>

    <string-array name="breeds_array">
        <item>Affenpinscher</item>
        <item>Afghan Hound</item>
        <item>African Hunting Dog</item>
        <item>Airedale Terrier</item>
        <item>American Staffordshire Terrier</item>
        <item>Appenzeller Sennenhund</item>
        <item>Australian Terrier</item>
        <item>Basenji</item>
        <item>Basset Hound</item>
        <item>Beagle</item>
        <item>Bedlington Terrier</item>
        <item>Bernese Mountain Dog</item>
        <item>Blenheim Spaniel</item>
        <item>Bloodhound</item>
        <item>Bluetick Coonhound</item>
        <item>Border Collie</item>
        <item>Border Terrier</item>
        <item>Borzoi</item>
        <item>Bouvier Des Flandres</item>
        <item>Boxer (dog)</item>
        <item>Griffon Bruxellois</item>
        <item>Briard</item>
        <item>Brittany Spaniel</item>
        <item>Bullmastiff</item>
        <item>Cairn Terrier</item>
        <item>Cardigan Welsh Corgi</item>
        <item>Chesapeake Bay Retriever</item>
        <item>Chihuahua (dog)</item>
        <item>Chow Chow</item>
        <item>Clumber Spaniel</item>
        <item>Flat-coated Retriever</item>
        <item>Soft-coated Wheaten Terrier</item>
        <item>Cocker Spaniel</item>
        <item>Collie</item>
        <item>Curly Coated Retriever</item>
        <item>Dandie Dinmont Terrier</item>
        <item>Dingo</item>
        <item>Doberman</item>
        <item>English Foxhound</item>
        <item>English Setter</item>
        <item>English Springer Spaniel</item>
        <item>Entlebucher Mountain Dog</item>
        <item>Eskimo Dog</item>
        <item>French Bulldog</item>
        <item>German Shepherd</item>
        <item>Giant Schnauzer</item>
        <item>Golden Retriever</item>
        <item>Gordon Setter</item>
        <item>Greater Swiss Mountain Dog</item>
        <item>Great Dane</item>
        <item>Great Pyrenees</item>
        <item>Groenendael dog</item>
        <item>Fox Terrier</item>
        <item>German Shorthaired Pointer</item>
        <item>Irish Setter</item>
        <item>Irish Terrier</item>
        <item>Irish Water Spaniel</item>
        <item>Irish Wolfhound</item>
        <item>Italian Greyhound</item>
        <item>Japanese Chin</item>
        <item>Keeshond</item>
        <item>Kelpie</item>
        <item>Kerry Blue Terrier</item>
        <item>Komondor</item>
        <item>Kuvasz</item>
        <item>Labrador Retriever</item>
        <item>Lakeland Terrier</item>
        <item>Leonberger</item>
        <item>Lhasa Apso</item>
        <item>Dachshund</item>
        <item>Alaskan Malamute</item>
        <item>Malinois dog</item>
        <item>Mexican Hairless Dog</item>
        <item>Miniature Pinscher</item>
        <item>Miniature Poodle</item>
        <item>Miniature Schnauzer</item>
        <item>Newfoundland dog</item>
        <item>Norfolk Terrier</item>
        <item>Norwegian Elkhound</item>
        <item>Norwich Terrier</item>
        <item>Old English Sheepdog</item>
        <item>Otterhound</item>
        <item>Papillon dog</item>
        <item>Pekingese</item>
        <item>Pembroke Welsh Corgi</item>
        <item>Pomeranian</item>
        <item>Pug</item>
        <item>Redbone Coonhound</item>
        <item>Rhodesian Ridgeback</item>
        <item>Rottweiler</item>
        <item>Boston Terrier</item>
        <item>Dhole</item>
        <item>Ibizan Hound</item>
        <item>Maltese dog</item>
        <item>Saint Bernard</item>
        <item>Saluki</item>
        <item>Samoyed dog</item>
        <item>Schipperke</item>
        <item>Scotch Terrier</item>
        <item>Scottish Deerhound</item>
        <item>Sealyham Terrier</item>
        <item>Shetland Sheepdog</item>
        <item>Siberian Husky</item>
        <item>Silky Terrier</item>
        <item>Staffordshire Bull Terrier</item>
        <item>Standard Poodle</item>
        <item>Standard Schnauzer</item>
        <item>Sussex Spaniel</item>
        <item>Black and Tan Coonhound</item>
        <item>Tibetan Mastiff</item>
        <item>Tibetan Terrier</item>
        <item>Toy Poodle</item>
        <item>English Toy Terrier (Black &amp; Tan)</item>
        <item>Shih Tzu</item>
        <item>Vizsla</item>
        <item>Treeing Walker Coonhound</item>
        <item>Weimaraner</item>
        <item>Welsh Springer Spaniel</item>
        <item>West Highland White Terrier</item>
        <item>Whippet</item>
        <item>Yorkshire Terrier</item>
    </string-array>

    <string-array name="array_languages" translatable="false">
        <item>English</item>
        <item>Deutsch</item>
        <item>Français </item>
        <item>ქართული</item>
    </string-array>

    <string-array name="array_language_codes" translateable="false">
        <item>en</item>
        <item>de</item>
        <item>fr </item>
        <item>ka</item>
    </string-array>

</resources>